[tool.poetry]
name = "representty"
version = "0.1.5"
description = "Tiny presentation tool based on rich and markdown"
authors = ["L3viathan <git@l3vi.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/L3viathan/representty"
keywords = ["presentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: IPython",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education",
    "Topic :: Multimedia :: Graphics :: Presentation",
]

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.3.1"
ipython = "*"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.11"

[tool.poetry.scripts]
rtty = 'representty:just_call_the_script'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
